[BE] refactor(#562): 서비스단 수정